<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_show_history"
        android:onClick="showHistory"
        android:title="@string/app_menu_show_history"
        app:showAsAction="always" />

    <item
        android:onClick="clearHistory"
        android:title="@string/app_menu_clear_history"
        app:showAsAction="always" />

    <item
        android:onClick="exportHistory"
        android:title="@string/app_menu_export_history"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="openSettings"
        android:title="@string/app_menu_settings"
        app:showAsAction="always" />

    <item
        android:onClick="openBillSplitter"
        android:title="@string/app_menu_bill_splitter"
        app:showAsAction="ifRoom" />
    <item
        android:onClick="openBaseConverter"
        android:title="@string/app_menu_base_converter"
        app:showAsAction="ifRoom" />
    <item
        android:onClick="selectThemeDialog"
        android:title="@string/app_menu_theme"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="openAbout"
        android:title="@string/app_menu_about"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="openGithub"
        android:title="@string/github"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="openSourceCode"
        android:title="@string/source_code"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="openLicense"
        android:title="@string/license"
        app:showAsAction="ifRoom" />

    <item
        android:onClick="joinTesterCommunity"
        android:title="@string/join_tester_community"
        app:showAsAction="ifRoom" />
</menu>
