<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:color="?attr/text_color"
        app:title="@string/preferences_general_category">
        <!--app:iconSpaceReserved="false"-->

        <Preference
            app:enabled="true"
            app:icon="@drawable/ic_language"
            app:key="mckimquyen.opencal.APP_LANGUAGE"
            app:selectable="true"
            app:summary="@string/preferences_language_summary"
            app:title="@string/preferences_language_title" />

        <Preference
            app:enabled="true"
            app:icon="@drawable/ic_privacy"
            app:key="mckimquyen.opencal.AD_PRIVACY_OPTIONS"
            app:selectable="true"
            app:summary="@string/preferences_ad_privacy_summary"
            app:title="@string/preferences_ad_privacy_title" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_vibrate"
            app:key="mckimquyen.opencal.KEY_VIBRATION_STATUS"
            app:singleLineTitle="false"
            app:summary="@string/preferences_vibration_summary"
            app:title="@string/preferences_vibration_title"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@drawable/ic_material_switch" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_thermostat"
            app:key="mckimquyen.opencal.RADIANS_INSTEAD_OF_DEGREES_BY_DEFAULT"
            app:singleLineTitle="false"
            app:summary="@string/preferences_radians_instead_of_degrees_by_default_summary"
            app:title="@string/preferences_radians_instead_of_degrees_by_default_title"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@drawable/ic_material_switch" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_science"
            app:key="mckimquyen.opencal.SCIENTIFIC_MODE_ENABLED_BY_DEFAULT"
            app:singleLineTitle="false"
            app:summary="@string/preferences_scientif_mode_enabled_by_default_summary"
            app:title="@string/preferences_scientif_mode_enabled_by_default_title"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@drawable/ic_material_switch" />

        <ListPreference
            app:defaultValue="10"
            app:entries="@array/number_precision_entries"
            app:entryValues="@array/number_precision_values"
            app:icon="@drawable/ic_precision"
            app:key="mckimquyen.opencal.NUMBER_PRECISION"
            app:singleLineTitle="false"
            app:title="@string/preferences_number_precision"
            app:useSimpleSummaryProvider="true" />


        <!-- <ListPreference
            app:key="reply"
            app:title="@string/reply_title"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:defaultValue="reply"
            app:useSimpleSummaryProvider="true"/> -->

    </PreferenceCategory>

    <PreferenceCategory
        app:color="?attr/text_color"
        app:title="@string/preferences_history_category">

        <ListPreference
            app:defaultValue="100"
            app:entries="@array/history_size_entries"
            app:entryValues="@array/history_size_values"
            app:icon="@drawable/ic_history"
            app:key="mckimquyen.opencal.HISTORY_SIZE"
            app:singleLineTitle="false"
            app:title="@string/preferences_history_size"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:color="?attr/text_color"
        app:title="@string/preferences_advanced_category">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_bedtime"
            app:key="mckimquyen.opencal.PREVENT_PHONE_FROM_SLEEPING"
            app:singleLineTitle="false"
            app:summary="@string/preferences_prevent_phone_from_sleeping_summary"
            app:title="@string/preferences_prevent_phone_from_sleeping_title"
            app:useSimpleSummaryProvider="true"
            app:widgetLayout="@drawable/ic_material_switch" />

    </PreferenceCategory>

    <!--<PreferenceCategory
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title"/>

        <SwitchPreferenceCompat
            app:key="attachment"
            app:title="@string/attachment_title"
            app:summaryOn="@string/attachment_summary_on"
            app:summaryOff="@string/attachment_summary_off"
            app:dependency="sync"/>

    </PreferenceCategory> -->

</PreferenceScreen>
